--- a/quiz maker/quiz/quiz.csproj
+++ b/quiz maker/quiz/quiz.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Presenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Question.cs" />
+    <Compile Include="Questions.cs" />
     <Compile Include="QuestionsPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
